fix: Fix a small color issues with new high contrast theme

--- a/css/themes.css
+++ b/css/themes.css
@@ -342,7 +342,7 @@
   --default-font: "Inter", sans-serif;
   --gudmrning-txt: linear-gradient(to right, #409eff 0%, #5baaf8 100%);
   --sat-accent-color1: #409eff;
-  --sat-accent-color-lighter: #409eff;
+  --sat-accent-color-lighter: #40a0ffb9;
   --moreapps-hovering-clr: #409eff;
   --favorites-hover: #4c566a;
   --for-white: #ffffff;
